--- a/app/src/main/res/layout/normal.xml
+++ b/app/src/main/res/layout/normal.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
-    <fragment android:name="com.michaeljuarez.morefragmentpractice.Fragment1"
+    <fragment
         android:id="@+id/frag1"
-        android:layout_weight="1"
+        android:name="com.michaeljuarez.morefragmentpractice.Fragment1"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         tools:layout="@layout/fragment_fragment1" />
 
-    <fragment android:name="com.michaeljuarez.morefragmentpractice.Fragment2"
+    <fragment
         android:id="@+id/frag2"
-        android:layout_weight="1"
+        android:name="com.michaeljuarez.morefragmentpractice.Fragment2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
         tools:layout="@layout/fragment_fragment2" />
 
 </LinearLayout>
